--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "proxy / load balancer for mcpe/pocketmine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node test.js"
   },
   "author": "jloper3@gmail.com",
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "dependencies": {
+    "express": "~4.13.0"
+  }
 }
